--- a/Research Proposal.tex
+++ b/Research Proposal.tex
@@ -21,14 +21,19 @@ Human-Robot interactions require complex knowledge about the environment and the
 
 With real-time knowledge of a persons position and the position of their limbs behavior recognition can be performed\cite{journals/ijsr/MeadAM13}. Behavior recognition is an important component of 
 \section{Goals}
+My goal is to develop an easy to setup people tracking and human behavior recognition system for large Human-Robot interaction environments.
 \section{Related Work}
-Today one common issue with RGB-D sensors is the limitation of positioning in an environment. Due to the fact that most RGB-D Sensors like the kinect for instance, use an IR pattern at a certain frequency to understand the scene depth. This poses a problem when two kinects project on the same objects where one kinect can see the IR pattern of the other making the signal ambiguous. Some attempts to vibrate each additional kinect at different frequencies have been used to allow the different IR fields to be in a different phase out of view of each other.
+Today one common issue with RGB-D sensors is the limitation of positioning in an environment. Due to the fact that most RGB-D Sensors like the kinect for instance, use an IR pattern at a certain frequency to understand the scene depth. This poses a problem when two kinects project on the same objects where one kinect can see the IR pattern of the other making the signal ambiguous. Some attempts to vibrate each additional kinect at different frequencies have been used to allow the different IR fields to be in a different phase out of view of each other[cite]. This has produced decent results allowing for multiple kinects to be placed in a scene without the worry of possible interference. The use of a vibrating attachment motion blurs the RGB image and reduces the accuracy of the depth estimates.
+
+Work has been done to develop multi-RGB-D sensor setups to provide better coverage over larger environments than a single sensor can accomplish. The use of multiple RGB-D sensors also helps identify a person in an environment more accurately and at different orientations more accurately. A single RGB-D sensor normally is only able to perform well when a person is directly facing it. The multiple sensors provides multiple views data that can be combined into a point cloud to produce good pose estimation more reliably in a scene. This is especially useful when a person is interacting with objects that occlude portions of a person from differnet views of the camera. A fused point cloud from each kinect is able to maintain accurate pose estimation even through lots of occlusions.
+
+The work in [cite] allowed for a more rich and natural artificial reality combat experience by using multiple kinects to understand direction the user was facing. This allowed the user to turn freely in his artificial environment. 
 \section{Proposed Research}
-I would like to attempt to use the new Kinect one sensor instead of the IR techonology in the hopes to produce a system capable of using N-TOFsensors in an arbitrary space to perform behavior analysis for HRI.
+I would like to attempt to use the new Kinect one sensor instead of the IR techonology in the hopes to produce a system capable of using N-TOFsensors in an arbitrary space to perform behavior analysis for HRI. The benefit of a TOF RGB-D sensor is that it uses pulses of light inorder to register depth in a scene. This is useful when multiple RGB-D sensors have intersecting fields of view. Regular Microsoft kinects are not able to accurately determine depth when more than one kinect is projecting its structured light onto the same objects. A TOF camera uses pulses of light and rather than a structured grid. Multiple TOF cameras will experience interference in a probabilitic manner. Tests will be performed to understand if the probability of multiple TOF camera light pulse collisions will significantly degrade the depth image.
+
+A multi-view calibration step will be performed to rectify the position of each camera with view of the scene. once the system is calibrated people tracking and behavior recognition can occur. The system will be capable of publishing the tracking information as well as the current recognition state to any robot on the same network as the system in real time.
 
 This will provide a cheaper way for researchers to analyze Human robot interactions and have feedback to robots about a persons current state in a given interaction. This will allow for an easy setup of sensors that give a robot far more information about a given HRI without the need to perform the computation on the robot itself. This means the current state of the human behavior as well as accurate human position will be known by robots in larger spaces than possible with a single kinect. This will avoid the necessity for complex tracking markers on participants. There has been a lot of work on tracking multiple people in RGB-D environments. This will also allow for multi-robot and multi-person interactions to take place in a more efficient manor that avoid each robot performing redundant computation to understand the location of each person in a given scenario. The end goal is to provide a fused scene where each person has a skeleton representing their position.
-
-I will use known a priori objects and place them in the scene. I will then compare the accuracy of the position as well as shape of the registered objects. This can also be done with a person but with less accuracy. I can also compare my method against other published methods.
 \section{Expected Outcomes}
 \section{Time-line}
 
